errors.txt
hm_cd.c: In function ‘helpCD’:
hm_cd.c:26:4: error: implicit declaration of function ‘print_num_fd’; did you mean ‘Print_num_fd’? [-Werror=implicit-function-declaration]
   26 |    print_num_fd(global->n, 2);
      |    ^~~~~~~~~~~~
      |    Print_num_fd
cc1: all warnings being treated as errors
